@@ -1,3 +1,9 @@
+2012-01-23 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFURL.c: Resolve URIs in CFURLCopyAbsoluteURL().
+	* Source/CFString.c: Fixed a few big bugs in CFMutableString.
+	* Tests/CFURL/ref_resolution.m: Added a few more tests.
+
 2012-01-21 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFURL.c: Added a URI parser.
